chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    application: backend
